--- a/script.ipynb
+++ b/script.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "!pip install tqdm pillow"
+    "!pip install torch torchvision tqdm scikit-learn pillow matplotlib"
    ]
   },
   {
